2005-07-07  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp (CTermView::OnMouseMove):
	Display hand cursor when hyperlinks are hovered.

	* src/mainframe.cpp (CMainFrame::set_tray_icon):
	Fix abnormal size of tray icon.

	* src/appconfig.cpp:
	AppConfig.WebBrowser can be stored now.

	* src/telnetview.cpp:
	Add <ctype.h> include to avoid potential compilation errors.
	Reported by Anton  <anton.tw@gmail.com>.

2005-07-07  Jim Huang  <jserv@kaffe.org>

	* src/pcmanx_pure_gtk2.cpp:
	Add missing libintl / locale includes.

	* src/stringutil.cpp:
	Add <ctype.h> include to avoid potential compilation errors.
	Reported by Anton  <anton.tw@gmail.com>.

	* src/site.h: Performan some cleanup for naming.

	* autogen.sh:
	Quick fix against the strange intltool behavior.

	* TODO:
	For developers, please file your todo list here.

2005-07-07  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/pcmanx_pure_gtk2.cpp:
	Add "bindtextdomain" to correctly locate message catalog file.

2005-07-07  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetcon.cpp (CTelnetCon::SendString):
	Replace all "\n" in string with correct CRLF before sent.
	
	* src/telnetview.cpp (CTelnetView::DoPasteFromClipboard):
	Bug fix.

2005-07-07  Jim Huang  <jserv@kaffe.org>

	* pcmanx.desktop.in:
	New file. Rename from pcmanx.desktop.

	* Makefile.am,
	configure.ac:
	Add entries for pcmanx.desktop generation.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* data/Makefile.am:
	Add install-hook.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/Makefile.am:
	Add all necessary headers to Makefile.am.

2005-07-06  Jim Huang  <jserv@kaffe.org>

	* src/Makefile.am:
	Fixlet to previous changes.

2005-07-06  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp (CTermData::UpdateDisplay),
	src/termview.cpp,
	src/widget.h,
	src/telnetview.cpp (CTelnetView::~CTelnetView),
	src/telnetcon.cpp:
	Minor bug fix.