@@ -1,3 +1,9 @@
+2005-07-07  Kanru Chen  <koster@debian.org.tw>
+
+	* src/termview.cpp
+	(CTermView::PasteFromClipboard) (CTermView::CopyToClipboard):
+	Use user's encoding setting to convert clipboard strings.
+
 2005-07-07  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
 
 	* src/termview.cpp (CTermView::OnMouseMove):
